# indexer

./: README.md  docker-compose.test.yml  jest.config.js  package-lock.json  package.json  registry-minimal.yaml  registry-testnet-v4.yaml  registry-turbo-v2.yaml  registry-turbo-v4.yaml  registrytest.yaml  registryturbo.yaml  save_wasms.py  tsconfig.json
.github/workflows/: deploy-pipeline.yml  rust.yml  test.yml
fly-app/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  dump.sql  fly.toml
fly-app/.github/workflows/: rust.yml
fly-app/scenarios_generator/: flake.nix  generate_urls.py  scenarios.toml  scenarios.yaml
fly-app/sql/: 1_role.sql  dump.sql
fly-app/src/: generated.rs  main.rs  test.rs  tracing.rs
fly-app/test/: TEST_PLAN.md
goldsky/archive/: index.yaml
goldsky/scripts/: drop-tables.sh  redeploy.sh  refresh.sh  turbo.sh  validate-pipelines.sh
goldsky/test/: index.yaml
goldsky/v1/: audit-race.sql  index.yaml  post_init.sql
lib/: db.types.ts  first-lambda.ts  get-contracts.ts  goldsky-stack.ts  periodic-lambda.ts
scripts/: drop-tables.sh  fetch-event-fixtures.ts  redeploy.sh  turbo.sh  validate-pipelines.sh
sql/: init.sql  v4_named_views.sql  v4_registries.sql  v4_sink_tables.sql
test/fixtures/: loader.ts
test/fixtures/soroban-events/: deploy.json  publish.json  register.json  rename.json  sub_reg.json  (+3 more)
test/fixtures/soroban-events-real/: deploy.json  publish.json  register.json  rename.json  sub_reg.json  update_owner.json
test/integration/: globalSetup.ts  pipeline-transforms-real.test.ts  pipeline-transforms.test.ts  setup.ts  v4-views.test.ts
test/unit/: get-contracts-validation.test.ts  goldsky-stack.test.ts  parse-deploy.test.ts  parse-publish.test.ts
testnet_reset_scripts/: README.md  redeploy_contracts.py  restore_wasms.py  save_wasms.py
