[package]
name = "fly-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# Integration tests that touch the shared Postgres test DB use `#[serial]`
# so they don't race each other on TRUNCATE between tests.
serial_test = "3"
# e2e test loads registry-turbo-v4.yaml to pull the pipeline transform SQL
# and replay it against Postgres before hitting the HTTP layer.
serde_yaml_ng = "0.10"
