[package]
name = "fly-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
soroban-meta = "26.0.1"
stellar-xdr = "26.0.1"
